# duckweed

./: LICENSE  README.md  pyproject.toml  requirements.txt
duckweed_results/: report.md
src/: _main_.py  duckweed_figs.py  duckweed_metrics.py  duckweed_parse.py
