[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "duckweed"
version = "0.1.0"
description = "Template-collapse metrics for AI-agent comment threads (structural fluency vs. semantic vacancy)"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
